Fix nav alignment + restore config

--- a/themes/minimal-news/source/css/style.css
+++ b/themes/minimal-news/source/css/style.css
@@ -155,6 +155,8 @@ body::before {
   text-transform: uppercase;
   cursor: pointer;
   padding: 3px 0;
+  line-height: 1.75;
+  display: inline;
   transition: color var(--transition);
 }
 
